Tests/project2/errors/decl3.flm
/* This tests for misplaced declarations */

fun foo()
    begin
    a:int;
    b:int;
    c:int;
    bar(a,b,c)
    end


        
